--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "vue": "^2.5.11",
+    "vue-resize-directive": "^1.1.4",
     "vue2-google-maps": "^0.10.6"
   },
   "browserslist": [
