--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   "dependencies": {
     "vue": "^2.5.11",
     "vue-resize-directive": "^1.1.4",
-    "vue2-google-maps": "^0.10.6"
+    "vue2-google-maps": "^0.10.6",
+    "vue2-touch-events": "^1.1.2"
   },
   "browserslist": [
     "> 1%",
